[project]
name = "flask-api-calls"
version = "1.1.2"
description = "flask-api-calls"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8,<9",
    "flask>=3.1.0,<4",
    "itsdangerous>=2.2.0,<3",
    "jinja2>=3.1.5,<4",
    "markdown>=3.7,<4",
    "markupsafe>=2.1.5,<3",
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.3,<3",
    "spotipy>=2.25.0,<3",
    "werkzeug>=3.1.3,<4",
]
